--- a/cmd/app/public/frontend/assets/i18n/ru.json
+++ b/cmd/app/public/frontend/assets/i18n/ru.json
@@ -60,5 +60,16 @@
     "QrCode":"QR код",
     "SecondFactor":"Второй фактор",
     "Check":"Проверить",
-    "Passkey":"Ключ"
+    "Passkey":"Ключ",
+    "Clear":"Очистить",
+    "NameSL":"Название",
+    "Amount":"Количество",
+    "Update":"Обновить",
+    "ListOfIngredients":"Список ингредиентов",
+    "ManageRecipe":"Управление рецептом",
+    "ToShoppingList":"В список покупок",
+    "EditRecipe":"Изменить рецепт",
+    "DeleteRecipe":"Удалить рецепт",
+    "PleaseSelectRecipe":"Пожалуйста, выберите рецепт!",
+    "SearchResults":"Результаты поиска:"
 }
